force-app/main/default/objects/Account/fields/ADMS_Code__c.field-meta.xml
<CustomField>
    <fullName>ADMS_Code__c</fullName>
    <label>ADMS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>