force-app/main/default/objects/Account/fields/Company_Code_KADS__c.field-meta.xml
<CustomField>
    <fullName>Company_Code_KADS__c</fullName>
    <label>Company Code KADS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>