force-app/main/default/objects/Account/fields/Dealer_Code_Master__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code_Master__c</fullName>
    <externalId>true</externalId>
    <label>Dealer Code Master</label>
    <length>255</length>
    <type>Text</type>
</CustomField>