force-app/main/default/objects/Account/fields/Dealer_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Email_2__c</fullName>
    <label>Dealer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>