force-app/main/default/objects/Account/fields/Email_Adress__c.field-meta.xml
<CustomField>
    <fullName>Email_Adress__c</fullName>
    <label>Email Adress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>