force-app/main/default/objects/Account/fields/KDS_CreateDate__c.field-meta.xml
<CustomField>
    <fullName>KDS_CreateDate__c</fullName>
    <label>KDS CreateDate</label>
    <type>Date</type>
</CustomField>