force-app/main/default/objects/Account/fields/Lead_follow_up_period_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_follow_up_period_Days__c</fullName>
    <label>Lead follow up period (Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>