force-app/main/default/objects/Account/fields/Main_Branch__c.field-meta.xml
<CustomField>
    <fullName>Main_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Branch</label>
    <type>Checkbox</type>
</CustomField>