force-app/main/default/objects/Account/fields/Main_SSC__c.field-meta.xml
<CustomField>
    <fullName>Main_SSC__c</fullName>
    <label>Main SSC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SKC_Main_Service_Center</valueSetName>
    </valueSet>
</CustomField>