force-app/main/default/objects/Account/fields/Original_Dealer_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Dealer_SF_ID__c</fullName>
    <label>Original Dealer SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>