force-app/main/default/objects/Account/fields/RecordID__c.field-meta.xml
<CustomField>
    <fullName>RecordID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordID</label>
    <type>Text</type>
</CustomField>