force-app/main/default/objects/Account/fields/Remark_Edit__c.field-meta.xml
<CustomField>
    <fullName>Remark_Edit__c</fullName>
    <label>Remark Edit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>