force-app/main/default/objects/Account/fields/Sale_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>Sale_Org_Code__c</fullName>
    <label>Sale Org Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>