force-app/main/default/objects/Account/fields/Sale_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Sale_Org_Name__c</fullName>
    <label>Sale Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>