force-app/main/default/objects/Account/fields/Search_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Search_Keyword__c</fullName>
    <label>Search Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>