force-app/main/default/objects/Account/fields/Shipto__c.field-meta.xml
<CustomField>
    <fullName>Shipto__c</fullName>
    <label>Shipto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>