force-app/main/default/objects/Account/fields/Shipto_name__c.field-meta.xml
<CustomField>
    <fullName>Shipto_name__c</fullName>
    <label>Shipto name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>