force-app/main/default/objects/Account/fields/Shop_Name__c.field-meta.xml
<CustomField>
    <fullName>Shop_Name__c</fullName>
    <label>Shop Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>