force-app/main/default/objects/Account/fields/Sold_to__c.field-meta.xml
<CustomField>
    <fullName>Sold_to__c</fullName>
    <label>Sold to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>