force-app/main/default/objects/Account/fields/Store_province__c.field-meta.xml
<CustomField>
    <fullName>Store_province__c</fullName>
    <label>Store province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>