force-app/main/default/objects/Account/fields/Sub_SSC__c.field-meta.xml
<CustomField>
    <fullName>Sub_SSC__c</fullName>
    <label>Sub SSC</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_SSC__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SKC_Service_Center</valueSetName>
    </valueSet>
</CustomField>