force-app/main/default/objects/Account/recordTypes/Dealer_Account.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Account</fullName>
    <active>true</active>
    <label>Dealer Account</label>
</RecordType>