force-app/main/default/objects/Account/recordTypes/Dealer_Master.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Master</fullName>
    <active>true</active>
    <label>Dealer Master</label>
</RecordType>