force-app/main/default/objects/Account/recordTypes/SKC_Default.recordType-meta.xml
<RecordType>
    <fullName>SKC_Default</fullName>
    <active>true</active>
    <label>SKC_Default</label>
</RecordType>