force-app/main/default/objects/Account/validationRules/Supervisor_not_allowed_edit_dealer.validationRule-meta.xml
<ValidationRule>
    <fullName>Supervisor_not_allowed_edit_dealer</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &quot;CRM Supervisor and Manager&quot;, !ISNEW(),  RecordType.Name = &quot;Dealer Master&quot;)</errorConditionFormula>
    <errorMessage>ไม่สามารถแก้ไขข้อมูล Dealer ได้</errorMessage>
</ValidationRule>