force-app/main/default/objects/Account/listViews/Dealer_Master_All_SSC.listView-meta.xml
<ListView>
    <fullName>Dealer_Master_All_SSC</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Dealer_Code_Master__c</columns>
    <columns>Dealer_Name__c</columns>
    <columns>Main_Branch__c</columns>
    <columns>Dealer_Plant_Code__c</columns>
    <columns>Sale_Org_Code__c</columns>
    <columns>Zone__c</columns>
    <columns>Plant_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Main_SSC__c</columns>
    <columns>Sub_SSC__c</columns>
    <columns>Store_province__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Dealer_Master</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>ศูนย์</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Dealer Master: All SSC</label>
</ListView>